<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2017 Jeff Gilfelt.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="chuck_name">Chuck</string>
    <string name="chuck_http_notification_title">Recording HTTP activity</string>
    <string name="chuck_clear">Clear</string>
    <string name="chuck_browse_sql_database">Browse SQLite database</string>
    <string name="chuck_overview">Overview</string>
    <string name="chuck_request">Request</string>
    <string name="chuck_response">Response</string>
    <string name="chuck_url">URL</string>
    <string name="chuck_method">Method</string>
    <string name="chuck_protocol">Protocol</string>
    <string name="chuck_status">Status</string>
    <string name="chuck_ssl">SSL</string>
    <string name="chuck_request_time">Request time</string>
    <string name="chuck_response_time">Response time</string>
    <string name="chuck_duration">Duration</string>
    <string name="chuck_request_size">Request size</string>
    <string name="chuck_response_size">Response size</string>
    <string name="chuck_total_size">Total size</string>
    <string name="chuck_yes">Yes</string>
    <string name="chuck_no">No</string>
    <string name="chuck_share">Share</string>
    <string name="chuck_share_as_text">Share as text</string>
    <string name="chuck_share_as_curl">Share as curl command</string>
    <string name="chuck_body_omitted">(encoded or binary body omitted)</string>
    <string name="chuck_search">Search</string>
    <string name="chuck_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="chuck_body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="chuck_tab_network">Network</string>
    <string name="chuck_tab_errors">Errors</string>
    <string name="chuck_notification_category">Chuck notifications</string>
    <string name="chuck_share_error_title">Error report</string>
    <string name="chuck_share_error_content"><![CDATA[Date: %s\nException: %s\nTag: %s\nMessage: %s\n\n%s]]></string>
</resources>
