<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2017 Jeff Gilfelt.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item android:title="@string/chuck_share"
        android:icon="@drawable/chuck_ic_share_white_24dp"
        app:showAsAction="always" >
        <menu >
            <group >
                <item android:title="@string/chuck_share_as_text"
                    android:id="@+id/share_text"/>
                <item android:title="@string/chuck_share_as_curl"
                    android:id="@+id/share_curl"/>
            </group>
        </menu>
    </item>
</menu>