<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="com.github.jgilfelt.chuck.ui.TransactionOverviewFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chuck_url"/>

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            tools:text="https://example.com/path/to/resource?here=might_be_really_long"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_method"/>

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="GET"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_protocol"/>

            <TextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="HTTP/1.1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_status"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="Complete"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_response"/>

            <TextView
                android:id="@+id/response"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="200 OK"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_ssl"/>

            <TextView
                android:id="@+id/ssl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="Yes"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_request_time"/>

            <TextView
                android:id="@+id/request_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_response_time"/>

            <TextView
                android:id="@+id/response_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="05/02/17 11:52:49"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_duration"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="405 ms"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_request_size"/>

            <TextView
                android:id="@+id/request_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="53 KB"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_response_size"/>

            <TextView
                android:id="@+id/response_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="148 KB"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chuck_total_size"/>

            <TextView
                android:id="@+id/total_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                tools:text="201 KB"/>

        </TableRow>

    </TableLayout>

</android.support.v4.widget.NestedScrollView>
